# crc-rs

./: .travis.yml  Cargo.toml  README.md  build.rs  emit_table_gen.sh
.github/workflows/: ci.yaml  rust.yaml
benches/: bench.rs
examples/: no_std.rs
examples/no_std/: Cargo.toml
examples/no_std/src/: lib.rs
src/: clmul.rs  crc128.rs  crc16.rs  crc32.rs  crc32_fast.rs  crc64.rs  crc8.rs  lib.rs  simd.rs  table.rs  util.rs
src/clmul/: x86.rs
src/crc128/: bytewise.rs  default.rs  nolookup.rs  slice16.rs
src/crc16/: bytewise.rs  clmul.rs  default.rs  nolookup.rs  simd.rs  slice16.rs
src/crc32/: bytewise.rs  clmul.rs  default.rs  nolookup.rs  simd.rs  slice16.rs
src/crc64/: bytewise.rs  default.rs  nolookup.rs  slice16.rs
src/crc8/: bytewise.rs  clmul.rs  default.rs  nolookup.rs  simd.rs  slice16.rs
src/simd/: x86.rs
src/util/: Cargo.toml  lib.rs
tests/: crc.rs  hash.rs  hasher.rs  test_under_all_feature_combinations.sh
