[package]
name = "crc"
version = "3.0.0"
authors = [
    "Rui Hu <code@mrhooray.com>",
    "Akhil Velagapudi <4@4khil.com>"
]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/mrhooray/crc-rs.git"
documentation = "https://docs.rs/crc"
description = "Rust implementation of CRC with support of various standards"
keywords = ["crc", "crc16", "crc32", "crc64", "hash"]
categories = ["algorithms", "no-std"]
edition = "2018"

[features]
# use the "NoTable" implementation for the default Crc<uXXX> struct, using no additional memory for a lookup table.
# Takes predence over "bytewise-mem-limit" and "slice16-mem-limit"
no-table-mem-limit = []
# use the "Bytewise" implementation for the default Crc<uXXX> struct, using 256 entries of the respective width for a lookup table.
# Takes predence over "slice16-mem-limit" and is used if no feature is selected
bytewise-mem-limit = []
# use the "Slice16" implementation for the default Crc<uXXX> struct, using 256 * 16 entries of the respective width for a lookup table.
# Can be overriden by setting "bytewise-mem-limit" and "slice16-mem-limit"
slice16-mem-limit = []

[dependencies]
crc-catalog = "2.1.0"

[dev-dependencies]
criterion = { version = "0.4" }

[[bench]]
name = "bench"
harness = false
